module_0 was changed
the "while" string was changed

--- a/module_0.ipynb
+++ b/module_0.ipynb
@@ -11,12 +11,13 @@
     "\n",
     "def game_core_v1(number):\n",
     "    count = 0\n",
+    "    \n",
     "    n = 15\n",
     "    i = 30\n",
     "    v = 45\n",
     "    c = 60\n",
     "    m = 75\n",
-    "    while i != number:\n",
+    "    while True:\n",
     "        if n > number:\n",
     "            n -= 1\n",
     "            count += 1\n",
@@ -44,32 +45,22 @@
     "    if number == n or number == i or number == v or number == c or number == m:\n",
     "   \n",
     "   \n",
-    "        return count # выход из цикла, если угадали"
+    "        return count # выход из цикла, если угадали\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "game_core_v1(number)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
